Spacing fixes

--- a/source/stylesheets/_sandwich-page-layout.scss
+++ b/source/stylesheets/_sandwich-page-layout.scss
@@ -201,6 +201,11 @@
 
   .feature-tree-title {
     color: $color-secondary-alt;
+
+    a {
+      color: inherit;
+      text-decoration: underline;
+    }
   }
 }
 
